chore: fix Learn more contrast in Simple Card Button

--- a/src/css/dark-mode.scss
+++ b/src/css/dark-mode.scss
@@ -7,6 +7,7 @@ html[data-theme="dark"] {
   --ifm-color-primary-lighter: #bfe3e2;
   --ifm-color-primary-lightest: var(--ifm-font-color-base);
   --ifm-font-color-base: #ddf4f3;
+  --ifm-simple-card-footer-btn-font-color: #ecf9f8;
   --ifm-background-color: #000f0f;
   --ifm-dropdown-background-color: #012121;
   --ifm-menu-color: var(--ifm-font-color-base);
