--- a/src/css/light-mode.scss
+++ b/src/css/light-mode.scss
@@ -11,6 +11,7 @@ html[data-theme="light"] {
   --ifm-background-color: #faf9f8;
   --ifm-menu-color-active: var(--ifm-color-primary);
   --ifm-font-color-base: #161514;
+  --ifm-simple-card-footer-btn-font-color: #161514;
   --ifm-heading-color: var(--ifm-font-color-base);
   --ifm-navbar-link-color: #606986;
   --ifm-navbar-background-color: var(--ifm-background-color);
